Se termina la vista de medallas (Faltan las imagenes)

--- a/www/templates/medallas.html
+++ b/www/templates/medallas.html
@@ -10,24 +10,24 @@
         </div>
         <div id="medallas-markdown10" style="color:#000000;text-align:center;">
             <p>
-                <strong>Chispa</strong>
+                <strong>{{tipo_medalla}}</strong>
             </p>
 
             <p>
-                <strong>Determinacion</strong>
+                <strong>{{nombre_medalla}}</strong>
             </p>
 
-            <p>El primer paso para lograr las metas es determinarlas, vas por buen camino.</p>
+            <p>{{descripcion_medalla}}</p>
         </div>
-        <button id="medallas-button78" class="button button-light  button-clear">12/40</button>
-        <button id="medallas-button67" class="button button-light  button-clear icon ion-chevron-left"></button>
-        <button id="medallas-button68" class="button button-light  button-clear icon ion-chevron-right"></button>
+        <button id="medallas-button78" class="button button-light  button-clear">{{cantidad_medallas}}</button>
+        <button id="medallas-flecha-izquierda" ng-click="cambiarMedallaIzquierda()" class="button button-light  button-clear icon ion-chevron-left"></button>
+        <button id="medallas-flecha-derecha" ng-click="cambiarMedallaDerecha()" class="button button-light  button-clear icon ion-chevron-right"></button>
         <button id="medallas-button77" class="button button-light  button-clear icon ion-share"></button>
         <div class="spacer" style="width: 285px; height: 17px;"></div>
         <button id="medallas-button72" class="button button-light button-small">0 Prometeo</button>
         <button id="medallas-button73" class="button button-light button-small">0 Antorcha</button>
-        <button id="medallas-button74" class="button button-light button-small">1 Fuego</button>
-        <button id="medallas-button75" class="button button-light button-small">2 Flama</button>
-        <button id="medallas-button76" class="button button-light button-small">5 Chispa</button>
+        <button id="medallas-button74" class="button button-light button-small">0 Fuego</button>
+        <button id="medallas-button75" class="button button-light button-small">0 Flama</button>
+        <button id="medallas-button76" class="button button-light button-small">0 Chispa</button>
     </ion-content>
 </ion-view>
