--- a/www/templates/especialistas.html
+++ b/www/templates/especialistas.html
@@ -1,13 +1,13 @@
 <ion-view title="Especialistas" id="page21">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
-        <form class="list">
+        <form class="list" ng-controller="especialistasCtrl">
             <div class="button-bar">
                 <a ui-sref="tabsController.metas" id="especialistas-button66" class="button button-positive button-small button-block button-outline">Mis metas</a>
                 <button id="especialistas-button82" class="button button-positive button-small button-block">Especialistas</button>
             </div>
             <label class="item item-select">
                 <span class="input-label"></span>
-                <select>
+                <select ng-model="municipio" >
                     <option>Zapopan</option>
                     <option>Guadalajara</option>
                     <option>Tonala</option>
@@ -17,30 +17,31 @@
             </label>
             <label class="item item-select">
                 <span class="input-label"></span>
-                <select>
-                    <option>Fisioterapeuta</option>
-                    <option>Nutriologo</option>
-                    <option>Entrenador</option>
+                <select ng-model="tipo">
+                    <option value="2">Fisioterapeuta</option>
+                    <option value="1">Nutriologo</option>
+                    <option value="3">Entrenador</option>
                 </select>
             </label>
+            <button ng-click="buscaEspecialistas()" class="button button-positive button-small button-block">Buscar</button>
             <div class="list card">
-                <div class="item item-body">
+                <div class="item item-body" ng-repeat="especialista in especialistas">
                     <form class="list">
                         <ion-item class="item-thumbnail-left">
                             <img src="img/r2AzIi1RNXMXKl1pnwWA_Default-Perfil-Hombre-320.jpg">
-                            <h2>Nombre de especialista</h2>
-                            <p>Categoria</p>
+                            <h2>{{especialista.nombre}}</h2>
+                          <!--   <p>{{ especialidad }}Categoria</p>-->
                         </ion-item>
                         <div id="especialistas-markdown16" style="color:#000000;">
                             <p>
-                                <strong>Especialidad</strong>
+                                <strong> {{ especialista.titulo }} </strong>
                             </p>
 
-                            <p>Descripción personal, de estudios y experiencias, el por que ser elegido o que puede ayudar.</p>
+                            <p>{{ especialista.descripcion }}</p>
                         </div>
                         <div class="spacer" style="width: 253px; height: 18px;"></div>
-                        <a href="mailto:" id="especialistas-button87" class="button button-stable  button-clear icon ion-email"></a>
-                        <a href="tel:" id="especialistas-button88" class="button button-stable  button-clear icon ion-ios-telephone"></a>
+                        <a href="mailto:{{ especialista.correo }}" id="especialistas-button87" class="button button-stable  button-clear icon ion-email"></a>
+                        <a href="tel:{{ especialista.telefono }}" id="especialistas-button88" class="button button-stable  button-clear icon ion-ios-telephone"></a>
                     </form>
                 </div>
             </div>
