Se hace la parte de Perfil

--- a/www/templates/miPerfil.html
+++ b/www/templates/miPerfil.html
@@ -11,7 +11,7 @@
             </div>
         </a>
         <div id="miPerfil-markdown29" style="color:#000000;text-align:center;">
-            <p>{{nombreUsuario}} | {{edad}}</p>
+            <p>{{nombre_usuario}}</p><p>{{edad_usuario}}</p>
         </div>
         <div class="spacer" style="width: 285px; height: 24px;"></div>
         <div id="miPerfil-markdown30" style="color:#000000;text-align:center;">
