se muestran los deportes sin clasificar por disciplina. Posible replanteo de la vista

--- a/www/templates/deportesFavoritos.html
+++ b/www/templates/deportesFavoritos.html
@@ -1,4 +1,4 @@
-<ion-view title="Deportes favoritos" id="page18">
+<ion-view ng-controller="deportesFavoritosCtrl" title="Deportes favoritos" id="page18">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <form class="list">
             <label class="item item-input">
@@ -8,16 +8,10 @@
         </form>
         <a ui-sref="tabsController.disciplinas" id="deportesFavoritos-button65" class="button button-positive  button-block">Guardar favoritos</a>
         <ion-list>
-            <ion-item class="item-divider">Disciplina</ion-item>
-            <ion-toggle toggle-class="toggle-positive">Actividad</ion-toggle>
-            <ion-toggle toggle-class="toggle-positive">Actividad</ion-toggle>
-            <ion-toggle toggle-class="toggle-positive">Actividad</ion-toggle>
-            <ion-toggle toggle-class="toggle-positive">Actividad</ion-toggle>
-            <ion-item class="item-divider">Disciplina</ion-item>
-            <ion-toggle toggle-class="toggle-positive">Actividad</ion-toggle>
-            <ion-toggle toggle-class="toggle-positive">Actividad</ion-toggle>
-            <ion-toggle toggle-class="toggle-positive">Actividad</ion-toggle>
-            <ion-toggle toggle-class="toggle-positive">Actividad</ion-toggle>
+          <div ng-repeat="disciplina in disciplinas">
+            <ion-item  class="item-divider">{{ disciplina.nombre }}</ion-item>
+            <ion-toggle ng-repeat="deporte in deportes" on-tap="guardaDeporte({{deporte.id}})" toggle-class="toggle-positive">{{ deporte.nombre }}</ion-toggle>
+          </div>
         </ion-list>
     </ion-content>
 </ion-view>
