--- a/www/templates/datosDePerfil.html
+++ b/www/templates/datosDePerfil.html
@@ -8,17 +8,18 @@
             <ion-item class="item-divider">Personal</ion-item>
             <label class="item item-input">
                 <span class="input-label">Nombre</span>
-                <input type="text" placeholder="">
+                <input type="text" placeholder="" ng-model="nombre">
             </label>
             <label class="item item-input">
                 <span class="input-label">Fecha de nacimiento</span>
-                <input type="date" placeholder="">
+                <input type="date" placeholder="" ng-model="fecha_nacimiento">
             </label>
             <label class="item item-select">
                 <span class="input-label">Genero</span>
                 <select>
                     <option>Masculino</option>
                     <option>Femenino</option>
+                    <option>N/D</option>
                 </select>
             </label>
             <ion-item class="item-divider">Vivienda actual</ion-item>
