--- a/www/templates/miPerfil.html
+++ b/www/templates/miPerfil.html
@@ -15,16 +15,16 @@
         </div>
         <div class="spacer" style="width: 285px; height: 24px;"></div>
         <div id="miPerfil-markdown30" style="color:#000000;text-align:center;">
-            <p>Practicando
+            <!--<p>Practicando
                 <strong>Actividad</strong>en
                 <strong>Nombre de espacio</strong>
             </p>
 
-            <p>Ciudad, Estado.</p>
+            <p>Ciudad, Estado.</p>-->
         </div>
         <div class="spacer" style="width: 285px; height: 24px;"></div>
         <div id="miPerfil-markdown31" style="color:#000000;text-align:center;">
-            <p>"Descripcion personal, puden ser varias lineas de texto"</p>
+            <p>"{{que_busco}}"</p>
         </div>
         <div class="spacer" style="width: 285px; height: 24px;"></div>
         <div id="miPerfil-markdown32" style="color:#000000;text-align:center;">
