--- a/www/templates/nuevaMeta.html
+++ b/www/templates/nuevaMeta.html
@@ -3,12 +3,12 @@
         <form class="list">
             <h4 id="nuevaMeta-heading12" style="color:#000000;text-align:center;">¿Que quieres lograr?</h4>
             <label class="item item-input">
-                <input type="text" placeholder="Nombre de tu meta">
+                <input type="text" placeholder="Nombre de tu meta" ng-model="meta.nombre">
             </label>
             <h4 id="nuevaMeta-heading11" style="color:#000000;text-align:center;">Define tu meta</h4>
             <label class="item item-select">
                 <span class="input-label">Unidad de medida</span>
-                <select>
+                <select ng-model="meta.tipoMedida">
                     <option>Segundos</option>
                     <option>MInutos</option>
                     <option>Horas</option>
@@ -26,20 +26,19 @@
                 </select>
             </label>
             <label class="item item-input">
-                <span class="input-label">Actual</span>
-                <input type="text" placeholder="">
+                <span class="input-label">Inicial</span>
+                <input type="number" placeholder="" ng-model="meta.inicio">
             </label>
             <label class="item item-input">
                 <span class="input-label">Meta</span>
-                <input type="text" placeholder="">
+                <input type="number" placeholder="" ng-model="meta.fin">
             </label>
             <label class="item item-input">
                 <span class="input-label">Fecha limite</span>
-                <input type="date" placeholder="">
+                <input type="date" placeholder="" ng-model="meta.fechaFin">
             </label>
-            <a ui-sref="tabsController.metas" id="nuevaMeta-button91" class="button button-assertive  button-block">Guardar</a>
+            <a ui-sref="tabsController.metas" ng-click="guardar(meta)" id="nuevaMeta-button91" class="button button-assertive  button-block">Guardar</a>
+            <a ui-sref="tabsController.metas" id="nuevaMeta-button92" class="button button-assertive  button-block">Cancelar</a>
         </form>
-        <form class="list"></form>
-        <form class="list"></form>
     </ion-content>
 </ion-view>
