--- a/www/templates/misEventos.html
+++ b/www/templates/misEventos.html
@@ -5,16 +5,16 @@
             <button id="misEventos-button32" style="font-weight:;" class="button button-positive button-small button-block button-outline">Eventos</button>
         </div>
         <div class="list card">
-            <div class="item item-body">
+            <div class="item item-body" ng-repeat="evento in eventos">
                 <ion-list>
                     <ion-item class="item-thumbnail-left">
                         <img src="img/cFpSUUkR2yjgJYN6rgfg_Default-Evento-320.jpg">
-                        <h2>Nombre de evento</h2>
-                        <p>5/Nov/15 16:00hrs - 5/Nov/15 22:00hrs</p>
+                        <h2>{{evento.nombre}}</h2>
+                        <p>{{evento.fecha}}</p>
                     </ion-item>
                 </ion-list>
                 <button id="misEventos-button33" style="color:Default;" class="button button-stable  button-clear icon ion-more"></button>
-                <a ui-sref="tabsController.detallesEspacio" id="misEventos-button44" style="color:Default;text-align:right;" class="button button-positive  button-clear">Locacion</a>
+                <!--<a ui-sref="tabsController.detallesEspacio" id="misEventos-button44" style="color:Default;text-align:right;" class="button button-positive  button-clear">Locacion</a>-->
                 <a ui-sref="tabsController.expandeElFuego" id="misEventos-button45" style="color:Default;text-align:right;" class="button button-positive  button-clear">Invitar</a>
             </div>
         </div>
