--- a/www/templates/detallesEvento.html
+++ b/www/templates/detallesEvento.html
@@ -2,7 +2,7 @@
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <ion-list>
             <ion-item class="item-thumbnail-left">
-                <img src="img/gjfCbeGJSwyhmk0bbZ8c_Default-Evento-320.jpg">
+                <img ng-src="{{evento.imagen}}">
                 <h2>{{evento.nombre}}</h2>
                 <!--<p>543 Personas asistiran</p>-->
             </ion-item>
