--- a/www/templates/medallas.html
+++ b/www/templates/medallas.html
@@ -6,7 +6,7 @@
             <button id="medallas-button71" class="button button-positive button-small button-block">Medallas</button>
         </div>
         <div style="text-align:center;">
-            <img src="img/CfJUwUeSaOsp8Nmx7iEu_antorcha.png" width="60%" height="auto">
+            <img src="img/medalla_{{imagen_medalla}}.png" width="60%" height="auto">
         </div>
         <div id="medallas-markdown10" style="color:#000000;text-align:center;">
             <p>
