--- a/www/templates/miPerfil.html
+++ b/www/templates/miPerfil.html
@@ -11,7 +11,7 @@
             </div>
         </a>
         <div id="miPerfil-markdown29" style="color:#000000;text-align:center;">
-            <p>{{nombre_usuario}}</p><p>{{edad_usuario}}</p>
+            <p>{{miembro.nombre}}</p><p>{{miembro.fechaNacimiento}}</p>
         </div>
         <div class="spacer" style="width: 285px; height: 24px;"></div>
         <div id="miPerfil-markdown30" style="color:#000000;text-align:center;">
@@ -24,13 +24,13 @@
         </div>
         <div class="spacer" style="width: 285px; height: 24px;"></div>
         <div id="miPerfil-markdown31" style="color:#000000;text-align:center;">
-            <p>"{{que_busco}}"</p>
+            <p>"{{miembro.queBusco}}"</p>
         </div>
         <div class="spacer" style="width: 285px; height: 24px;"></div>
         <div id="miPerfil-markdown32" style="color:#000000;text-align:center;">
             <p>
-                <strong>8</strong>Medallas ganadas |
-                <strong>16</strong>Metas cumplidas</p>
+                <strong>8 </strong>Medallas ganadas |
+                <strong>16 </strong>Metas cumplidas</p>
         </div>
         <button id="miPerfil-button47" class="button button-light button-small">0 Prometeo</button>
         <button id="miPerfil-button48" class="button button-light button-small">0 Antorcha</button>
