--- a/www/templates/datosDePerfil.html
+++ b/www/templates/datosDePerfil.html
@@ -8,15 +8,15 @@
             <ion-item class="item-divider">Personal</ion-item>
             <label class="item item-input">
                 <span class="input-label">Nombre</span>
-                <input type="text" placeholder="" ng-model="nombre">
+                <input type="text" placeholder="" ng-model="miembro.nombre">
             </label>
             <label class="item item-input">
                 <span class="input-label">Fecha de nacimiento</span>
-                <input type="date" placeholder="" ng-model="fecha_nacimiento">
+                <input type="date" placeholder="" ng-bind="miembro.fechaNacimiento | date : 'yyyy-MM-dd'" ng-model="miembro.fechaNacimiento">
             </label>
             <label class="item item-select">
                 <span class="input-label">Genero</span>
-                <select>
+                <select ng-model="miembro.sexo">
                     <option>Masculino</option>
                     <option>Femenino</option>
                     <option>N/D</option>
