Se termina el detalle de un espacio deportivo y se avanza en el detalle de una meta

--- a/www/templates/detallesEspacio.html
+++ b/www/templates/detallesEspacio.html
@@ -2,18 +2,18 @@
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <ion-list>
             <ion-item class="item-thumbnail-left">
-                <img src="img/Imcqy50S8iHmsWAA6YvP_Default-Espacio-320.jpg">
-                <h2>Nombre de espacio</h2>
-                <p>Disciplina deportiva</p>
+                <img ng-src="http://admin.antorcha.mx/img/espacios/espacio_{{espacio.id}}_1_.png">
+                <h2>{{espacio.nombre}}</h2>
+                <!--<p>{{}}</p>-->
             </ion-item>
         </ion-list>
         <div class="spacer" style="width: 285px; height: 23px;"></div>
         <div id="detallesEspacio-markdown4" style="color:#000000;text-align:center;">
             <p>Horario
-                <strong>L-S: 9:00am - 8:00pm</strong>
+                <strong>{{espacio.horario}}</strong>
             </p>
         </div>
-        <button id="detallesEspacio-button21" style="color:#FF9522;" class="button button-light  button-clear icon ion-ios-star">5</button>
+        <button id="detallesEspacio-button21" style="color:#FF9522;" class="button button-light  button-clear icon ion-ios-star">{{espacio.valoracion}}</button>
         <a href="tel:" id="detallesEspacio-button17" class="button button-light  button-clear icon ion-ios-telephone"></a>
         <a ui-sref="tabsController.expandeElFuego" id="detallesEspacio-button16" class="button button-light  button-clear icon ion-share"></a>
         <div class="spacer" style="width: 285px; height: 23px;"></div>
@@ -22,9 +22,9 @@
                 <strong>Actividades</strong>
             </p>
         </div>
-        <button id="detallesEspacio-button55" class="button button-assertive button-small">Actividad</button>
-        <button id="detallesEspacio-button56" class="button button-assertive button-small">Actividad</button>
-        <button id="detallesEspacio-button57" class="button button-assertive button-small">Actividad</button>
+        <button id="detallesEspacio-button55" class="button button-assertive button-small">Boxeo</button>
+        <button id="detallesEspacio-button56" class="button button-assertive button-small">Karate</button>
+        <button id="detallesEspacio-button57" class="button button-assertive button-small">Lucha cuerpo a cuerpo</button>
         <div class="spacer" style="width: 285px; height: 23px;"></div>
         <div id="detallesEspacio-markdown7" style="color:#000000;">
             <p>
@@ -32,8 +32,7 @@
             </p>
         </div>
         <div id="detallesEspacio-markdown8" style="color:#535353;">
-            <p>Normally, both your asses would be dead as fucking fried chicken, but you happen to pull this shit while I'm in a transitional period so I don't wanna kill you, I wanna help you. But I can't give you this case, it don't belong to me. Besides,
-                I've already been through too much shit this morning over this case to hand it over to your dumb ass.</p>
+            <p>{{espacio.descripcion}}</p>
         </div>
         <div class="spacer" style="width: 285px; height: 23px;"></div>
         <div id="detallesEspacio-markdown9" style="color:#000000;">
@@ -41,9 +40,9 @@
                 <strong>Servicios extras</strong>
             </p>
         </div>
-        <button id="detallesEspacio-button58" class="button button-balanced button-small">Servicio</button>
-        <button id="detallesEspacio-button59" class="button button-balanced button-small">Servicio</button>
-        <button id="detallesEspacio-button60" class="button button-balanced button-small">Servicio</button>
+        <button id="detallesEspacio-button58" class="button button-balanced button-small">Estacionamiento</button>
+        <button id="detallesEspacio-button59" class="button button-balanced button-small">Locker</button>
+        <!--<button id="detallesEspacio-button60" class="button button-balanced button-small">Servicio</button>-->
         <div class="spacer" style="width: 285px; height: 23px;"></div>
         <div id="detallesEspacio-markdown11" style="color:#000000;">
             <p>
@@ -53,7 +52,7 @@
         <a ui-sref="tabsController.escribirReseA" id="detallesEspacio-button23" style="text-align:right;" class="button button-stable button-small button-block button-clear icon-right ion-android-create">Escribir una reseña</a>
         <div id="detallesEspacio-markdown13" style="color:#666666;">
             <p>
-                <strong>Titulo de la reseña</strong>
+                <strong>Escribe una reseña</strong>
             </p>
         </div>
         <div id="detallesEspacio-markdown14" style="color:#000000;">
@@ -77,7 +76,7 @@
         <form class="list">
             <label class="item item-select">
                 <span class="input-label">Membresia</span>
-                <select>
+                <select >
                     <option>Mensual $300.00</option>
                     <option>Anual $2,800.00</option>
                 </select>
