--- a/www/templates/metas.html
+++ b/www/templates/metas.html
@@ -11,7 +11,7 @@
                     <form class="list">
                         <h1 id="metas-heading10" style="color:#000000;font-weight:300;text-align:center;">{{meta.porcentaje}}%</h1>
                         <ion-item class="range range-positive">
-                            <input type="range" value="50" min="0" max="100">
+                            <input type="range" value="{{meta.porcentaje}}" min="0" max="100">
                         </ion-item>
                         <div id="metas-markdown33" style="color:#000000;text-align:center;">
                             <p>
