se agrega el mapa a la vista de buscaespacio y ahora se puede modificar la información de perfil.

--- a/www/templates/datosDePerfil.html
+++ b/www/templates/datosDePerfil.html
@@ -3,30 +3,30 @@
         <div style="text-align:center;">
             <img src="img/QZC7ySsTTOzse9eZ91Zy_Default-Perfil-320.jpg" width="60%" height="auto">
         </div>
-        <form class="list">
+        <form class="list" >
             <div class="spacer" style="width: 285px; height: 33px;"></div>
             <ion-item class="item-divider">Personal</ion-item>
             <label class="item item-input">
                 <span class="input-label">Nombre</span>
-                <input type="text" placeholder="" ng-model="miembro.nombre">
+                <input type="text" id="nombre" placeholder="" ng-model="miembro.nombre">
             </label>
             <label class="item item-input">
                 <span class="input-label">Fecha de nacimiento</span>
-                <input type="date" placeholder="" ng-bind="miembro.fechaNacimiento | date : 'yyyy-MM-dd'" ng-model="miembro.fechaNacimiento">
+                <input type="date" id="fechaNacimiento" placeholder="yyyy-mm-dd" ng-bind="miembro.fechaNacimiento | date : 'yyyy-MM-dd'" ng-model="miembro.fechaNacimiento">
             </label>
             <label class="item item-select">
                 <span class="input-label">Genero</span>
-                <select ng-model="miembro.sexo">
-                    <option>Masculino</option>
-                    <option>Femenino</option>
-                    <option>N/D</option>
+                <select id="sexo" ng-model="miembro.sexo">
+                    <option value = "M" >Masculino</option>
+                    <option value = "F" >Femenino</option>
+                    <option value = "N/D" >N/D</option>
                 </select>
             </label>
-            <ion-item class="item-divider">Vivienda actual</ion-item>
-            <label class="item item-input">
-                <span class="input-label">Estado</span>
-                <input type="text" placeholder="">
-            </label>
+           <!-- <ion-item class="item-divider">Vivienda actual</ion-item>
+                 <label class="item item-input">
+                    <span class="input-label">Estado</span>
+                    <input type="text" placeholder="">
+                </label>
             <label class="item item-input">
                 <span class="input-label">Ciudad</span>
                 <input type="text" placeholder="">
@@ -34,12 +34,12 @@
             <label class="item item-input">
                 <span class="input-label">Domicilio</span>
                 <input type="text" placeholder="">
-            </label>
+            </label> !-->
             <ion-item class="item-divider">Sobre ti</ion-item>
             <label class="item item-input">
-                <input type="text" placeholder="Biografia o cita personal">
+                <input type="text" id="descrip" placeholder="Biografia o cita personal" ng-model="miembro.descripcion">
             </label>
-            <a ui-sref="tabsController.miPerfil" id="datosDePerfil-button92" class="button button-assertive  button-block">Guardar</a>
+            <a ui-sref="tabsController.miPerfil" id="datosDePerfil-button92" ng-click="editaInformacion(miembro)" class="button button-assertive  button-block">Guardar</a>
         </form>
     </ion-content>
 </ion-view>
