--- a/www/templates/buscarEspacios.html
+++ b/www/templates/buscarEspacios.html
@@ -1,6 +1,10 @@
+<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self' api.antorcha.mx">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self' maps.google.com">
+<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-src 'self' https://cordova.apache.org">
 <ion-view title="Buscar Espacios" id="page2" style="background-color:Default;">
   <ion-content overflow-scroll="true" padding="false" scroll="true" class="has-header">
-
     <div class="button-bar" ><!-- ng-init="inicializar()"-->
       <button id="buscarEspacios-button10" style="font-weight:;" class="button button-positive button-small button-block">Espacios</button>
       <a href="#/page1/page10" ui-sref="tabsController.buscarEventos" id="buscarEspacios-button11" style="font-weight:;" class="button button-positive button-small button-block button-outline">Eventos</a>
