Quedan las peticiones en internet

--- a/www/templates/buscarEspacios.html
+++ b/www/templates/buscarEspacios.html
@@ -1,10 +1,13 @@
-<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">
+<!--S<meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *">
 <meta http-equiv="Content-Security-Policy" content="default-src 'self' api.antorcha.mx">
 <meta http-equiv="Content-Security-Policy" content="default-src 'self' maps.google.com">
 <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-src 'self' https://cordova.apache.org">
+<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; frame-src 'self' https://cordova.apache.org">-->
+
 <ion-view title="Buscar Espacios" id="page2" style="background-color:Default;">
-  <ion-content overflow-scroll="true" padding="false" scroll="true" class="has-header">
+
+  <ion-content overflow-scroll="false" padding="false" scroll="false" class="has-header">
     <div class="button-bar" ><!-- ng-init="inicializar()"-->
       <button id="buscarEspacios-button10" style="font-weight:;" class="button button-positive button-small button-block">Espacios</button>
       <a href="#/page1/page10" ui-sref="tabsController.buscarEventos" id="buscarEspacios-button11" style="font-weight:;" class="button button-positive button-small button-block button-outline">Eventos</a>
@@ -12,11 +15,11 @@
     <a ui-sref="tabsController.detallesEspacio" id="buscarEspacios-button14" class="button button-positive button-small button-block">Detalles Espacio Deportivo</a>
     <div>
       <p>
-        <ion-content ng-controller="buscarEspaciosCtrl">
+        <!--<ion-content ng-controller="buscarEspaciosCtrl">-->
           <div id="map" ng-model="map" data-tap-disabled="true"   style="width: 1500px;height: 500px">
 
           </div>
-        </ion-content>
+        <!--</ion-content>-->
       </p>
     </div>
   </ion-content>
