--- a/www/templates/tabsController.html
+++ b/www/templates/tabsController.html
@@ -1,4 +1,5 @@
 <ion-view title="Tabs Controller" id="page1">
+<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
     <ion-tabs class="tabs-stable tabs-icon-top">
         <ion-tab title="Buscar" icon="ion-ios-search" href="#/page1/page2">
             <ion-nav-view name="tab1"></ion-nav-view>
