--- a/www/templates/iniciaSesion.html
+++ b/www/templates/iniciaSesion.html
@@ -1,4 +1,5 @@
 <ion-view title="Inicia sesion" id="page7" style="background-color:#232C39;">
+<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <form class="list" ng-controller="iniciaSesionCtrl">
             <div style="text-align:center;">
